# CustosEye

./: .env.example  .gitignore  BingSiteAuth.xml  CNAME  CUSTOSEYE_SHA256.txt  CustosEye.spec  LICENSE  LICENSE.md  README.md  README_howto.md  VERSION.txt  about.html  cookies.html  documentation.html  download.html  ethics.html  index.html  installer.iss  legal.html  license.html  methodology.html  privacy.html  pyproject.toml  pytest.ini  requirements.txt  robots.txt  ruff.toml  setup_env.py  sitemap.xml  styles.css
.github/workflows/: build.yml
agent/: integrity_check.py  monitor.py  network_scan.py  rules_engine.py  win_sign.py
algorithm/: csc_engine.py
app/: console.py
dashboard/: app.py  auth.py  auth_routes.py  config.py
dashboard/templates/: index.html
data/: config.json  csc_weights.json  integrity_targets.json  name_trust.json  rules.json  self_suppress.json
docs/: architecture.mmd
js/: analytics-attach.js  binary.js  consent.js  nav-accessibility.js
scripts/: freeze_version.py
tests/: README_TESTS.md  conftest.py  test_about.py  test_agent_integrity_check.py  test_agent_monitor.py  test_agent_network_scan.py  test_agent_rules_engine.py  test_agent_win_sign.py  test_app_console.py  test_csc_engine.py  test_csc_engine_core.py  test_csc_engine_helpers.py  test_dashboard_app.py  test_dashboard_auth.py  test_dashboard_auth_routes.py  test_dashboard_config.py  test_diff_formatting_fixes.py  test_diff_optional.py  test_events.py  test_exe_smoke_optional.py  test_integration.py  test_integrity.py  test_monitor.py  test_ping.py  test_proctree.py  test_rules_engine.py  test_summary.md
(+13 files in other folders)
