[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custoseye"
version = "0.1.0"
description = "CustosEye Phase 1 MVP"
authors = [{ name = "Your Name" }]
requires-python = ">=3.11,<3.12"
dependencies = [
  "psutil>=5.9",
  "Flask>=3.0",
]

[tool.pytest.ini_options]
addopts = "-q"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.setuptools.packages.find]
where = ["."]